Remove unused image files and update image paths in HTML files to include the components directory.

--- a/v1/cart.html
+++ b/v1/cart.html
@@ -279,21 +279,21 @@
         name: "Galaxy S24 Ultra 256GB",
         price: 1199.99,
         quantity: 1,
-        image: "s24.jpg"
+        image: "./components/s24.jpg"
     },
     {
         id: 2,
         name: 'MacBook Air M3 13"',
         price: 999.99,
         quantity: 1,
-        image: "m3.jpg"
+        image: "./components/m3.jpg"
     },
     {
         id: 3,
         name: "Sony WH-1000XM5 Headphones",
         price: 349.99,
         quantity: 1,
-        image: "sony.jpg"
+        image: "./components/sony.jpg"
     }
 ];
 
