--- a/v1/index.html
+++ b/v1/index.html
@@ -611,19 +611,19 @@
         <h2 class="section-title">Shop by Category</h2>
         <div class="categories">
             <a href="categories.html?category=electronics" class="category-card">
-                <img src="electronics.jpg" alt="Electronics">
+                <img src="./components/electronics.jpg" alt="Electronics">
                 <div class="category-name">Electronics</div>
             </a>
             <a href="categories.html?category=fashion" class="category-card">
-                <img src="fashion.jpg" alt="Fashion">
+                <img src="./components/fashion.jpg" alt="Fashion">
                 <div class="category-name">Fashion</div>
             </a>
             <a href="categories.html?category=accessories" class="category-card">
-                <img src="accessories.jpg" alt="Accessories">
+                <img src="./components/accessories.jpg" alt="Accessories">
                 <div class="category-name">Accessories</div>
             </a>
             <a href="categories.html?category=footwear" class="category-card">
-                <img src="footwear.jpg" alt="Footwear">
+                <img src="./components/footwear.jpg" alt="Footwear">
                 <div class="category-name">Footwear</div>
             </a>
         </div>
@@ -771,7 +771,7 @@
                 price: 89.99,
                 category: "Electronics",
                 rating: 4.5,
-                image: "wbh.jpg"
+                image: "./components/wbh.jpg"
             },
             {
                 id: 2,
@@ -779,7 +779,7 @@
                 price: 29.99,
                 category: "Fashion",
                 rating: 4.2,
-                image: "mcts.jpg"
+                image: "./components/mcts.jpg"
             },
             {
                 id: 3,
@@ -787,7 +787,7 @@
                 price: 24.99,
                 category: "Accessories",
                 rating: 4.8,
-                image: "sswbjpg.jpg"
+                image: "./components/sswbjpg.jpg"
             },
             {
                 id: 4,
@@ -795,7 +795,7 @@
                 price: 149.99,
                 category: "Electronics",
                 rating: 4.6,
-                image: "swft.jpg"
+                image: "./components/swft.jpg"
             },
             {
                 id: 5,
@@ -811,7 +811,7 @@
                 price: 39.99,
                 category: "Accessories",
                 rating: 4.4,
-                image: "plw.jpg"
+                image: "./components/plw.jpg"
             }
         ];
 
