--- a/v1/categories.html
+++ b/v1/categories.html
@@ -579,7 +579,7 @@
                     <!-- Product 1 -->
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="s24.jpg" alt="Smartphone">
+                            <img src="./components/s24.jpg" alt="Smartphone">
                             <div class="product-badge">NEW</div>
                         </div>
                         <div class="product-info">
@@ -604,7 +604,7 @@
                     <!-- Product 2 -->
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="m3.jpg" alt="Laptop">
+                            <img src="./components/m3.jpg" alt="Laptop">
                             <div class="product-badge sale-badge">SALE</div>
                         </div>
                         <div class="product-info">
@@ -629,7 +629,7 @@
                     <!-- Product 3 -->
                     <div class="product-card">
                         <div class="product-image">
-                            <img src="sony.jpg" alt="Headphones">
+                            <img src="./components/sony.jpg" alt="Headphones">
                         </div>
                         <div class="product-info">
                             <div class="product-category">Audio</div>
